--- a/templates/home.html
+++ b/templates/home.html
@@ -2,16 +2,16 @@
 {% load static %}
 {% block content %}
 <br>
-<h3>{{today}} <img src="{% static 'img/location.png' %}" height="30" width="30"> Toshkent </h3>
+<h3>{{today}} <img src="{% static 'img/location.png' %}" height="30" width="30"> Tashkent </h3>
 
 <h1><img src="{% static 'img/prayer-rug.png' %}" height="40" width="50">Prayer Times</h1>
 <table>
   <tr>
-    <td><b>Bomdod</b></td>
-    <td><b>Peshin</b></td>
+    <td><b>Fajr</b></td>
+    <td><b>Zuhr</b></td>
     <td><b>Asr</b></td>
-    <td class="active"><b>Shom</b></td>
-    <td><b>Xufton</b></td>
+    <td class="active"><b>Maghrib</b></td>
+    <td><b>Isha</b></td>
   </tr>
   <tr>
   
